fix(post): social bar visibility restored

--- a/assets/scss/components/_post.scss
+++ b/assets/scss/components/_post.scss
@@ -265,6 +265,10 @@ $post-conclusion-spacing-lg: $spacing-content-default;
 .post__sticky-bar {
   &.post__sticky-bar--lg-only {
     display: none;
+
+    @include media-breakpoint-up(lg) {
+      display: flex;
+    }
   }
 
   @include media-breakpoint-up(xl) {
